[tool.poetry]
name = "proj-cats"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"


[tool.poetry.group.dev.dependencies]
fastapi = {extras = ["all"], version = "^0.115.0"}
sqlalchemy = {extras = ["async"], version = "^2.0.35"}
uvicorn = "^0.31.0"
ruff = "^0.6.8"
asyncpg = "^0.29.0"
python-json-logger = "^2.0.7"



[tool.poetry.group.test.dependencies]
pytest = "^7.3.2"
pytest-asyncio = "0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Set the maximum line length to 80.
line-length = 80

[tool.ruff.lint]
# Add the `line-too-long` rule to the enforced rule set. By default, Ruff omits rules that
# overlap with the use of a formatter, like Black, but we can override this behavior by
# explicitly adding the rule.
extend-select = ["E501", "N", "I"]
